# LiberTEM-blobfinder

./: .buildinfo  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  acknowledgments.html  appveyor.yml  changelog.html  conftest.py  docs_requirements.txt  examples.html  genindex.html  hatch_build.py  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  reference.html  search.html  searchindex.js  setup.cfg  setup.py  strainmap-SiGe.html  test_requirements.txt  tox.ini  usage.html
.doctrees/: acknowledgments.doctree  changelog.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree  reference.doctree  usage.doctree
.doctrees/changelog/features/: integration.doctree  progress.doctree  zeroshift.doctree
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ci.yml
_modules/: index.html
_modules/libertem_blobfinder/base/: correlation.html
_modules/libertem_blobfinder/common/: correlation.html  patterns.html
_modules/libertem_blobfinder/udf/: correlation.html  integration.html  refinement.html  utils.html
_sources/: acknowledgments.rst.txt  changelog.rst.txt  examples.rst.txt  index.rst.txt  reference.rst.txt  usage.rst.txt
_static/: documentation_options.js
changelog/features/: integration.html  progress.html  zeroshift.html
docs/: Makefile  make.bat
docs/source/: acknowledgments.rst  changelog.rst  conf.py  examples.rst  exmples.rst  index.rst  install.rst  reference.rst  strainmap-SiGe.nblink  strainmap-poly.nblink  upsampling.nblink  usage.rst
examples/: peak_selector.ipynb  sim-and-strainmap.ipynb  strainmap-SiGe.ipynb  upsampling-refinement.ipynb
packaging/: contributors.json  creators.json  zenodo-upload.json
prototypes/: integration.ipynb
scripts/: release  requirements.txt  zenodo_upload
src/libertem_blobfinder/: __init__.py  __version__.py  correlation.py  refinement.py
tests/: test_base.py  test_blobfinder.py  test_common.py  test_fullmatch.py  test_gridmatching.py  test_masks.py  test_udf.py  utils.py
tests/udf/: conftest.py  test_udf.py
(+26 files in other folders)
